[Styles] added some general macros, fixed home page layout issues

--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -46,3 +46,13 @@ main {
     background: linear-gradient( $rot, $start, $end );
     //filter: progid.DXImageTransform.Microsoft.gradient( startColorstr='#{$start}', endColorStr='#{$end}', GradientType="#{$rot}" );
 }
+
+@mixin box-shadow() {
+    -webkit-box-shadow: $box-shadow-depth rgba(175,175,175,0.8);
+    -moz-box-shadow: $box-shadow-depth rgba(175,175,175,0.8);
+    box-shadow: $box-shadow-depth rgba(175,175,175,0.8);
+}
+
+@mixin text-shadow() {
+    text-shadow: $box-shadow-depth rgba(175,175,175,0.8);
+}
