--- a/src/styles/parameters.scss
+++ b/src/styles/parameters.scss
@@ -47,3 +47,5 @@ $full-bleed-left-margin: -3.1%;
 $full-bleed-right-margin: 0%;
 $sm-full-bleed-left-margin: -3.1%;
 $sm-full-bleed-right-margin: -10.25%;
+
+$box-shadow-depth: 0px 0px 2px 1px;
