--- a/src/styles/partials/header.scss
+++ b/src/styles/partials/header.scss
@@ -16,7 +16,7 @@ header {
     }
 
     &.home {
-        background-color: transparent;
+        background-color: $pre-college-white;
 
         .logo {
             display: none;
